k8s/services/order-service/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: order-service
        image: selimhorri/order-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8300
