k8s/services/order-service/order-service-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
  - port: 8300
    targetPort: 8300
